carts/zig/null0.zig


// GRAPHICS
/// Create a new blank image.
pub extern "null0" fn new_image(width: i32, height: i32, color: Color) Image;
/// Copy an image to a new image.
pub extern "null0" fn image_copy(image: Image) Image;
/// Create an image from a region of another image.
pub extern "null0" fn image_subimage(image: Image, x: i32, y: i32, width: i32, height: i32) Image;
/// Clear the screen.
pub extern "null0" fn clear(color: Color) void;
/// Draw a single pixel on the screen.
pub extern "null0" fn draw_point(x: i32, y: i32, color: Color) void;
/// Draw a line on the screen.
pub extern "null0" fn draw_line(startPosX: i32, startPosY: i32, endPosX: i32, endPosY: i32, color: Color) void;
/// Draw a filled rectangle on the screen.
pub extern "null0" fn draw_rectangle(posX: i32, posY: i32, width: i32, height: i32, color: Color) void;
/// Draw a filled triangle on the screen.
pub extern "null0" fn draw_triangle(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, color: Color) void;
/// Draw a filled ellipse on the screen.
pub extern "null0" fn draw_ellipse(centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, color: Color) void;
/// Draw a filled circle on the screen.
pub extern "null0" fn draw_circle(centerX: i32, centerY: i32, radius: i32, color: Color) void;
/// Draw a filled polygon on the screen.
pub extern "null0" fn draw_polygon(points: [*]const Vector, numPoints: i32, color: Color) void;
/// Draw a filled arc on the screen.
pub extern "null0" fn draw_arc(centerX: i32, centerY: i32, radius: f32, startAngle: f32, endAngle: f32, segments: i32, color: Color) void;
/// Draw a filled round-rectangle on the screen.
pub extern "null0" fn draw_rectangle_rounded(x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, color: Color) void;
/// Draw an image on the screen.
pub extern "null0" fn draw_image(src: Image, posX: i32, posY: i32) void;
/// Draw a tinted image on the screen.
pub extern "null0" fn draw_image_tint(src: Image, posX: i32, posY: i32, tint: Color) void;
/// Draw an image, rotated, on the screen.
pub extern "null0" fn draw_image_rotated(src: Image, posX: i32, posY: i32, degrees: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) void;
/// Draw an image, flipped, on the screen.
pub extern "null0" fn draw_image_flipped(src: Image, posX: i32, posY: i32, flipHorizontal: bool, flipVertical: bool, flipDiagonal: bool) void;
/// Draw an image, scaled, on the screen.
pub extern "null0" fn draw_image_scaled(src: Image, posX: i32, posY: i32, scaleX: f32, scaleY: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) void;
/// Draw some text on the screen.
pub extern "null0" fn draw_text(font: Font, text: [*:0]const u8, posX: i32, posY: i32, color: Color) void;
/// Save an image to persistant storage.
pub extern "null0" fn save_image(image: Image, filename: [*:0]const u8) void;
/// Load an image from a file in cart.
pub extern "null0" fn load_image(filename: [*:0]const u8) Image;
/// Resize an image, return copy.
pub extern "null0" fn image_resize(image: Image, newWidth: i32, newHeight: i32, filter: ImageFilter) Image;
/// Scale an image, return copy.
pub extern "null0" fn image_scale(image: Image, scaleX: f32, scaleY: f32, filter: ImageFilter) Image;
/// Replace a color in an image, in-place.
pub extern "null0" fn image_color_replace(image: Image, color: Color, replace: Color) void;
/// Tint a color in an image, in-place.
pub extern "null0" fn image_color_tint(image: Image, color: Color) void;
/// Fade a color in an image, in-place.
pub extern "null0" fn image_color_fade(image: Image, alpha: f32) void;
/// Copy a font to a new font.
pub extern "null0" fn font_copy(font: Font) Font;
/// Scale a font, return a new font.
pub extern "null0" fn font_scale(font: Font, scaleX: f32, scaleY: f32, filter: ImageFilter) Font;
/// Load a BMF font from a file in cart.
pub extern "null0" fn load_font_bmf(filename: [*:0]const u8, characters: [*:0]const u8) Font;
/// Load a BMF font from an image.
pub extern "null0" fn load_font_bmf_from_image(image: Image, characters: [*:0]const u8) Font;
/// Measure the size of some text.
pub extern "null0" fn measure_text(font: Font, text: [*:0]const u8, textLength: i32) *Dimensions;
/// Meaure an image (use 0 for screen).
pub extern "null0" fn measure_image(image: Image) *Dimensions;
/// Load a TTY font from a file in cart.
pub extern "null0" fn load_font_tty(filename: [*:0]const u8, glyphWidth: i32, glyphHeight: i32, characters: [*:0]const u8) Font;
/// Load a TTY font from an image.
pub extern "null0" fn load_font_tty_from_image(image: Image, glyphWidth: i32, glyphHeight: i32, characters: [*:0]const u8) Font;
/// Load a TTF font from a file in cart.
pub extern "null0" fn load_font_ttf(filename: [*:0]const u8, fontSize: i32) Font;
/// Invert the colors in an image, in-place.
pub extern "null0" fn image_color_invert(image: Image) void;
/// Calculate a rectangle representing the available alpha border in an image.
pub extern "null0" fn image_alpha_border(image: Image, threshold: f32) *Rectangle;
/// Crop an image, in-place.
pub extern "null0" fn image_crop(image: Image, x: i32, y: i32, width: i32, height: i32) void;
/// Crop an image based on the alpha border, in-place.
pub extern "null0" fn image_alpha_crop(image: Image, threshold: f32) void;
/// Adjust the brightness of an image, in-place.
pub extern "null0" fn image_color_brightness(image: Image, factor: f32) void;
/// Flip an image, in-place.
pub extern "null0" fn image_flip(image: Image, horizontal: bool, vertical: bool) void;
/// Change the contrast of an image, in-place.
pub extern "null0" fn image_color_contrast(image: Image, contrast: f32) void;
/// Use an image as an alpha-mask on another image.
pub extern "null0" fn image_alpha_mask(image: Image, alphaMask: Image, posX: i32, posY: i32) void;
/// Create a new image, rotating another image.
pub extern "null0" fn image_rotate(image: Image, degrees: f32, filter: ImageFilter) Image;
/// Create a new image of a gradient.
pub extern "null0" fn image_gradient(width: i32, height: i32, topLeft: Color, topRight: Color, bottomLeft: Color, bottomRight: Color) Image;
/// Unload an image.
pub extern "null0" fn unload_image(image: Image) void;
/// Unload a font.
pub extern "null0" fn unload_font(font: Font) void;
/// Clear an image.
pub extern "null0" fn clear_image(destination: Image, color: Color) void;
/// Draw a single pixel on an image.
pub extern "null0" fn draw_point_on_image(destination: Image, x: i32, y: i32, color: Color) void;
/// Draw a line on an image.
pub extern "null0" fn draw_line_on_image(destination: Image, startPosX: i32, startPosY: i32, endPosX: i32, endPosY: i32, color: Color) void;
/// Draw a filled rectangle on an image.
pub extern "null0" fn draw_rectangle_on_image(destination: Image, posX: i32, posY: i32, width: i32, height: i32, color: Color) void;
/// Draw a filled triangle on an image.
pub extern "null0" fn draw_triangle_on_image(destination: Image, x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, color: Color) void;
/// Draw a filled ellipse on an image.
pub extern "null0" fn draw_ellipse_on_image(destination: Image, centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, color: Color) void;
/// Draw a circle on an image.
pub extern "null0" fn draw_circle_on_image(destination: Image, centerX: i32, centerY: i32, radius: i32, color: Color) void;
/// Draw a filled polygon on an image.
pub extern "null0" fn draw_polygon_on_image(destination: Image, points: [*]const Vector, numPoints: i32, color: Color) void;
/// Draw a filled round-rectangle on an image.
pub extern "null0" fn draw_rectangle_rounded_on_image(destination: Image, x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, color: Color) void;
/// Draw an image on an image.
pub extern "null0" fn draw_image_on_image(destination: Image, src: Image, posX: i32, posY: i32) void;
/// Draw a tinted image on an image.
pub extern "null0" fn draw_image_tint_on_image(destination: Image, src: Image, posX: i32, posY: i32, tint: Color) void;
/// Draw an image, rotated, on an image.
pub extern "null0" fn draw_image_rotated_on_image(destination: Image, src: Image, posX: i32, posY: i32, degrees: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) void;
/// Draw an image, flipped, on an image.
pub extern "null0" fn draw_image_flipped_on_image(destination: Image, src: Image, posX: i32, posY: i32, flipHorizontal: bool, flipVertical: bool, flipDiagonal: bool) void;
/// Draw an image, scaled, on an image.
pub extern "null0" fn draw_image_scaled_on_image(destination: Image, src: Image, posX: i32, posY: i32, scaleX: f32, scaleY: f32, offsetX: f32, offsetY: f32, filter: ImageFilter) void;
/// Draw some text on an image.
pub extern "null0" fn draw_text_on_image(destination: Image, font: Font, text: [*:0]const u8, posX: i32, posY: i32, color: Color) void;
/// Draw a outlined (with thickness) rectangle on the screen.
pub extern "null0" fn draw_rectangle_outline(posX: i32, posY: i32, width: i32, height: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) triangle on the screen.
pub extern "null0" fn draw_triangle_outline(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) ellipse on the screen.
pub extern "null0" fn draw_ellipse_outline(centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) circle on the screen.
pub extern "null0" fn draw_circle_outline(centerX: i32, centerY: i32, radius: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) polygon on the screen.
pub extern "null0" fn draw_polygon_outline(points: [*]const Vector, numPoints: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) arc on the screen.
pub extern "null0" fn draw_arc_outline(centerX: i32, centerY: i32, radius: f32, startAngle: f32, endAngle: f32, segments: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) round-rectangle on the screen.
pub extern "null0" fn draw_rectangle_rounded_outline(x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) rectangle on an image.
pub extern "null0" fn draw_rectangle_outline_on_image(destination: Image, posX: i32, posY: i32, width: i32, height: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) triangle on an image.
pub extern "null0" fn draw_triangle_outline_on_image(destination: Image, x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) ellipse on an image.
pub extern "null0" fn draw_ellipse_outline_on_image(destination: Image, centerX: i32, centerY: i32, radiusX: i32, radiusY: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) circle on an image.
pub extern "null0" fn draw_circle_outline_on_image(destination: Image, centerX: i32, centerY: i32, radius: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) polygon on an image.
pub extern "null0" fn draw_polygon_outline_on_image(destination: Image, points: [*]const Vector, numPoints: i32, thickness: i32, color: Color) void;
/// Draw a outlined (with thickness) round-rectangle on an image.
pub extern "null0" fn draw_rectangle_rounded_outline_on_image(destination: Image, x: i32, y: i32, width: i32, height: i32, cornerRadius: i32, thickness: i32, color: Color) void;
